<resources>
    <string name="appName">Beauty Style</string>
    <string name="nameMainLogo">Салон Красоты \n \"Анастасия\"</string>
    <string name="logo">Logo</string>
    <string name="hairText">Прически</string>
    <string name="nailText">Маникюр</string>
    <string name="address">Адрес</string>
    <string name="classic_manicure_desc">Классический обрезной маникюр подходит для любого состояния ногтей. Процедура начинается с обязательной обработки кожи рук специальным дезинфицирующим средством. Ногтям придается желаемая форма. Руки погружают в теплый раствор, после чего размягченную кутикулу удаляют маникюрными щипчиками, избавляются от заусенцев. В конце процедуры массажными движениями на кожу вокруг ногтя наносится питательное масло – оно оказывает заживляющее воздействие, питает ногтевую пластину.</string>
    <string name="hardware_manicure_desc">Отличное решение для проблемных ногтей. Аппаратный маникюр будет эффективен как при поврежденной ногтевой пластине, так и при различных грибковых инфекциях. Аппаратный маникюр выполняется с использованием специального аппарата: боры и фрезы устраняют ороговевшие участки эпидермиса вокруг ногтевого ложа, придают форму ногтям, оставляя кутикулу без повреждений. Маникюр обязательно делают только на сухой коже, что полностью исключает травматизм и риск заражения. Процедура абсолютно безопасна и безболезненна.</string>
    <string name="hardware_pedicure_desc">Благодаря особой технике проведения аппаратного педикюра - решение  проблем стопы, вросшего ногтя, трещин, мозолей, грибковых заболеваний - становится реальным. Аппаратный педикюр абсолютно гигиеничен. Стопа не подвергается распариванию в воде, а обрабатывается специальным смягчающим средством для ороговевшей кожи. В качестве инструментов для обработки ногтей, кутикулы и загрубевшей кожи –используют профессиональные насадки, боры и фрезы различных размеров и диаметров. Они удаляют жесткий роговой слой, не трогая здоровую кожу, что  делает процедуру полностью безболезненной.</string>
    <string name="classic_manicure">Классический маникюр</string>
    <string name="hardware_manicure">Аппаратный маникюр</string>
    <string name="hardware_pedicure">Аппаратный педикюр</string>
    <string name="classic_hair">Классический стиль прически</string>
    <string name="sport_hair">Спортивный стиль прически</string>
    <string name="celebrity_hair">Праздничный стиль прически</string>
    <string name="classic_hair_desc">Этот стиль подразумевает аккуратность и завершенность, обладает четкой формой и строгими линиями.</string>
    <string name="sport_hair_desc">Этот стиль причесок чаще всего выбирают люди, которые занимаются спортом и вообще предпочитают активный образ жизни. Прически в спортивном стиле очень удобны в носке, не требуют длительной укладки и не подразумевают использование всевозможных средств для укладки. Такие прически наиболее актуальны на коротких и средней длины волосах. \n Спортивный стиль не обязательно подразумевает ношение сугубо спортивной одежды и обуви, в совокупности с вечерним нарядом спортивная прическа может выглядеть весьма сексуально и гламурно. Кроме того, спортивный стиль прически абсолютно не сковывает движений, поэтому помогает чувствовать себя уверенно в любых жизненных ситуациях.</string>
    <string name="celebrity_hair_desc">Такие прически в огромном количестве представляются на конкурсах и показах среди стилистов и мастеров парикмахерского искусства. \n Среди зрелищных причесок можно найти повседневные, креативные и вечерние прически. Зрелищная прическа создается для какого-либо мероприятия, для того чтобы придать образу яркость и индивидуальность.</string>
    <string name="address_desc">Здесь должен быть адрес ну и может быть контакты.</string>
</resources>
